crates/type_checker/src/tests/snapshots/binop_bools_cmp_2.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 152
expression: "(test[1], res)"
---
- "\nfn main(x: bool) {\n    x == false\n}\n"
- Ok:
    nodes:
      - Stmt:
          Fn:
            proto:
              name: main
              args:
                - - x
                  - Bool
              ret_ty: Void
              is_extern: false
            body:
              Expr:
                Block:
                  list:
                    - Expr:
                        BinOp:
                          op: Eq
                          lhs:
                            Expr:
                              Ident:
                                name: x
                                ty: Bool
                          rhs:
                            Expr:
                              Lit:
                                value:
                                  Bool: false
                                ty: Bool
                          ty: Bool
                  ty: Bool

