crates/type_checker/src/tests/snapshots/binop_complex.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 152
expression: "(test[1], res)"
---
- "\nfn foo() {\n    let a: int = 1\n    a + 2 / 4 + (2 * 2)\n}\n"
- Ok:
    nodes:
      - Stmt:
          Fn:
            proto:
              name: foo
              args: []
              ret_ty: Void
              is_extern: false
            body:
              Expr:
                Block:
                  list:
                    - Stmt:
                        Let:
                          name: a
                          antn: Int32
                          init:
                            Expr:
                              Lit:
                                value:
                                  Int32: 1
                                ty: Int32
                    - Expr:
                        BinOp:
                          op: Add
                          lhs:
                            Expr:
                              BinOp:
                                op: Add
                                lhs:
                                  Expr:
                                    Ident:
                                      name: a
                                      ty: Int32
                                rhs:
                                  Expr:
                                    BinOp:
                                      op: Div
                                      lhs:
                                        Expr:
                                          Lit:
                                            value:
                                              Int32: 2
                                            ty: Int32
                                      rhs:
                                        Expr:
                                          Lit:
                                            value:
                                              Int32: 4
                                            ty: Int32
                                      ty: Int32
                                ty: Int32
                          rhs:
                            Expr:
                              BinOp:
                                op: Mul
                                lhs:
                                  Expr:
                                    Lit:
                                      value:
                                        Int32: 2
                                      ty: Int32
                                rhs:
                                  Expr:
                                    Lit:
                                      value:
                                        Int32: 2
                                      ty: Int32
                                ty: Int32
                          ty: Int32
                  ty: Int32

