crates/type_checker/src/tests/snapshots/binop_lit_char_1.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 152
expression: "(test[1], res)"
---
- "\nfn main(x: int) {\n    'a' > 'c'\n}\n"
- Ok:
    nodes:
      - node:
          Fn:
            proto:
              name: main
              args:
                - - x
                  - int
              ret_ty: void
              is_extern: false
            body:
              node:
                Block:
                  list:
                    - node:
                        BinOp:
                          op: Gt
                          lhs:
                            node:
                              Lit:
                                value:
                                  Char: 97
                            ty: Char
                          rhs:
                            node:
                              Lit:
                                value:
                                  Char: 99
                            ty: Char
                      ty: Bool
              ty: Bool
        ty: ~

