crates/type_checker/src/tests/snapshots/binop_lit_char_2.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 156
expression: "(test[1], res)"
---
- "\nfn main(x: char) {\n    x > 'c'\n}\n"
- Ok:
    nodes:
      - Stmt:
          Fn:
            proto:
              name: main
              args:
                - - x
                  - Char
              ret_ty: Int32
            body:
              Block:
                list:
                  - Expr:
                      BinOp:
                        sym: Gt
                        lhs:
                          Expr:
                            Ident:
                              name: x
                              ty: Char
                        rhs:
                          Expr:
                            Lit:
                              value:
                                Char: 99
                              ty: Char
                        ty: Bool
                  - Expr:
                      Lit:
                        value:
                          Int32: 0
                        ty: Int32
                ty: Bool

