crates/type_checker/src/tests/snapshots/block_let_mismatch_1.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 190
expression: "(test[1], res)"
---
- "\nlet x: int = {\n    1.0\n}\n"
- Err: "Types don't match in let statement. Annotated with `int32` but initial value is `float`"

