crates/type_checker/src/tests/snapshots/call_basic.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 238
expression: "(test[1], res)"
---
- "\nfn plusOne(x: int) -> int {\n    x + 1\n}\nfn main() {\n    plusOne(1)\n}\n"
- Ok:
    nodes:
      - node:
          Fn:
            proto:
              name: plusOne
              args:
                - - x
                  - Int32
              ret_ty: Int32
              is_extern: false
            body:
              node:
                Block:
                  list:
                    - node:
                        BinOp:
                          op: Add
                          lhs:
                            node:
                              Ident:
                                name: x
                            ty: Int32
                          rhs:
                            node:
                              Lit:
                                value:
                                  Int32: 1
                            ty: Int32
                      ty: Int32
              ty: Int32
        ty: ~
      - node:
          Fn:
            proto:
              name: main
              args: []
              ret_ty: Void
              is_extern: false
            body:
              node:
                Block:
                  list:
                    - node:
                        Call:
                          name: plusOne
                          args:
                            - node:
                                Lit:
                                  value:
                                    Int32: 1
                              ty: Int32
                      ty: Int32
              ty: Int32
        ty: ~

