crates/type_checker/src/tests/snapshots/call_mismatch_arg_type.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 238
expression: "(test[1], res)"
---
- "\nfn plusOne(x: int) -> int {\n    x + 1\n}\nfn main() {\n    let x: float = 1.0\n    plusOne(x)\n}\n"
- Err: "Type mismatch in arg 1 of call to `plusOne()`: `int` != `float`"

